# caloxtreme_clf

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/agents/: code-explorer-audit.agent.md  code-explorer.agent.md  explore-repo.agent.md
batch/: debug-gpu.sh  payload.sh  pm_submit_batch_40GB_1GPU.sh  submit-gpu-shared.sh
config/: mlp_caloinn300.yaml  mlp_caloinn300_latent.yaml  mlp_caloinn300_optimized.yaml  mlp_caloinn300_sharded_dm.yaml
data/: HighLevelFeatures.py  datamodule.py  sharded_datamodule.py  utils.py
module/: __init__.py  classifier.py  lightning.py
scripts/: plot_saved_classifier_outputs.py  plotting_utils.py  prepare_gen_latent.py  resample_classifier.py  resample_latent.py
scripts/sandbox/: measure_dataloader.py  run_dataloader_benchmark.sh  run_sandbox_benchmark.sh
training_utils/: trainer.py  wandb.py
training_utils/callbacks/: prediction_writer.py
training_utils/callbacks/.ipynb_checkpoints/: prediction_writer-checkpoint.py
