[project]
name = "caloxtreme-clf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "jsonargparse[signatures]>=4.48.0",
    "jupyter>=1.1.1",
    "lightning==2.5.5",
    "litlogger>=2026.3.17",
    "matplotlib>=3.10.8",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "ruff>=0.15.10",
    "scienceplots>=2.2.1",
    "scikit-learn>=1.7.2",
    "torch>=2.11.0",
    "wandb>=0.26.0",
]
